main/resources/kubernetes-dashboard.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  resourceVersion: "880"
  selfLink: /api/v1/namespaces/kube-system/services/kubernetes-dashboard
  uid: b1a0ea9f-2632-11e9-ae62-96000019d9a3
spec:
  clusterIP: 10.152.183.167
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31665
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
