main/resources/ingress_nexus_https.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: am-https-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: selfsigning-issuer
    certmanager.k8s.io/cluster-issuer: ca-issuer
    #certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    #certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /
  namespace: ingress-nginx
spec:
  tls:
  - hosts:
    - k8stest.domaindrivenarchitecture.org
    secretName: echo-cert
  rules:
    - host: k8stest.domaindrivenarchitecture.org
      http:
        paths:
          - path: /apple
            backend:
              serviceName: apple-service
              servicePort: 5678
          - path: /banana
            backend:
              serviceName: banana-service
              servicePort: 5678
         # - path: /
         #   backend:
         #     serviceName: nexus-service
         #     servicePort: 8081
