main/resources/ingress_simple.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-simple
  namespace: ingress-nginx
spec:
  rules:
    - http:
        paths:
          - path: /apple
            backend:
              serviceName: apple-service
              servicePort: 5678
          - path: /banana
            backend:
              serviceName: banana-service
              servicePort: 5678
