main/resources/ingress_simple_https_ca.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-simple
  annotations:
    certmanager.k8s.io/cluster-issuer: ca-issuer
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - the.test.host
    secretName: example-de-tls
  rules:
    - host: the.test.host
      http:
        paths:
          - path: /apple
            backend:
              serviceName: apple-service
              servicePort: 5678
          - path: /banana
            backend:
              serviceName: banana-service
              servicePort: 5678
